# Kokoro-FastAPI

./: CONTRIBUTING.md  docker-bake.hcl  pyproject.toml
.github/workflows/: release.yml
api/src/: main.py
api/src/core/: config.py
api/src/inference/: kokoro_v1.py
api/src/middlewares/: viztracer.py
api/src/routers/: development.py
charts/kokoro-fastapi/: values.yaml
docker/cpu/: Dockerfile
docker/gpu/: Dockerfile
docker/rocm/: Dockerfile  kdb_install.sh  tensible_install.sh
